--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/server.js"
+    "start": "node ./src/server.js"
   },
   "author": "",
   "license": "ISC",
